# wagic_woth

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
JGE/: Makefile  Makefile.hge  meson.build
JGE/docs/: Doxyfile.in  meson.build
JGE/include/: DebugRoutines.h  Encoding.h  JAnimator.h  JAssert.h  JFileSystem.h  JGE.h  JGameObject.h  JGui.h  JLogger.h  JMD2Model.h  JNetwork.h  JOBJModel.h  JParticleEffect.h  JParticleSystem.h  JRenderer.h  JResourceManager.h  JSocket.h  JSoundSystem.h  JSpline.h  JSprite.h  JTypes.h  Threading.h  Vector2D.h  vram.h
JGE/include/hge/: hgecolor.h  hgedistort.h  hgefont.h  hgeparticle.h  hgerect.h  hgevector.h
JGE/include/jge/: memory.hpp
JGE/include/jge/platform/psp/: mutex.hpp  this_thread.hpp  thread.hpp
JGE/include/jge/platform/sdl/: mutex.hpp  this_thread.hpp  thread.hpp
JGE/include/jge/thread/: mutex.hpp  thread.hpp  unique_lock.hpp
JGE/include/jge/time/: duration.hpp
JGE/include/unzip/: crypt.h  iowin32.h  mztools.h  unzip.h
JGE/src/: Encoding.cpp  JAnimator.cpp  JDistortionMesh.cpp  JFileSystem.cpp  JGBKFont.cpp  JGE.cpp  JGameObject.cpp  JGfx.cpp  JGui.cpp  JLBFont.cpp  JLogger.cpp  JMD2Model.cpp  JMP3.cpp  JNetwork.cpp  JOBJModel.cpp  JParticle.cpp  JParticleEffect.cpp  JParticleEmitter.cpp  JParticleSystem.cpp  JResourceManager.cpp  JSfx.cpp  JSpline.cpp  JSprite.cpp  JTTFont.cpp  SDLmain.cpp  Vector2D.cpp  glutmain.cpp  main.cpp
JGE/src/hge/: hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgeparticle.cpp  hgerect.cpp  hgevector.cpp
JGE/src/pc/: JGfx.cpp  JSfx.cpp  JSocket.cpp
JGE/src/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
JGE/src/unzip/: zip.h
JGE/src/zipFS/: fileio.h  static_assert.h  stdafx.cpp  stdafx.h  stdint_old.h  zfs.vcxproj.filters  zfsystem.cpp  zfsystem.h  ziphdr.cpp  zstream.cpp  zstream.h
docs/adr/: 0001-record-architecture-decisions.md  0002-deprecated-build-targets.md  0003-fmod-dependency.md
libs/: meson.build
libs/jge/: meson.build
libs/jge/docs/: Doxyfile.in  meson.build
libs/jge/include/: Encoding.h  JAnimator.h  JApp.h  JDistortionMesh.h  JFileSystem.h  JGE.h  JGameLauncher.h  JGui.h  JLBFont.h  JLogger.h  JMD2Model.h  JParticle.h  JParticleEmitter.h  JRenderer.h  JResourceManager.h  JSocket.h  JSpline.h  JSprite.h  JTypes.h  Threading.h  Vector2D.h  Vector3D.h  decoder_prx.h
libs/jge/include/hge/: hgecolor.h  hgedistort.h  hgefont.h  hgeparticle.h  hgerect.h
libs/jge/include/jge/: memory.hpp
libs/jge/include/jge/math/: math.hpp  vector_2d.hpp
libs/jge/src/: Encoding.cpp  JAudio.cpp  JCooleyesMP3.cpp  JGE.cpp  JGui.cpp  JLBFont.cpp  JLogger.cpp  JMD2Model.cpp  JNetwork.cpp  JParticle.cpp  JParticleEmitter.cpp  JResourceManager.cpp  JSocket.cpp  SDLmain.cpp  Vector2D.cpp  main.cpp
libs/jge/src/hge/: hgecolor.cpp  hgeparticle.cpp  hgerect.cpp  hgevector.cpp
libs/jge/src/pc/: JGfx.cpp
libs/jge/src/zipFS/: zfs.cpp  zfs.sln  zfs.vcxproj  zfsystem.cpp  zfsystem.h  ziphdr.h  zstream.cpp  zstream_zlib.h
libs/jge/tests/: meson.build
libs/jge/tests/unittests/: meson.build
libs/jge/tests/unittests/src/: main.cpp
libs/jge/tests/unittests/src/jge/math/: math_tests.cpp  vector_2d_tests.cpp
libs/tinyxml/: meson.build
libs/unity_cpp/: meson.build
libs/unity_cpp/include/unity/: unity.hpp
projects/: meson.build
projects/mtg/: Makefile  meson.build
projects/mtg/Windows/: resource.h
projects/mtg/docs/: Doxyfile.in  meson.build
projects/mtg/docs/manual/: manual.md
projects/mtg/docs/old/: LICENSE  psplink_tutorial.txt
projects/mtg/include/: AIHints.h  AIPlayer.h  AIPlayerBaka.h  AIPlayerBakaB.h  AIStats.h  ActionElement.h  ActionLayer.h  ActionStack.h  AllAbilities.h  CacheEngine.h  CardEffect.h  CardGui.h  CardPrimitive.h  CardSelector.h  Counters.h  Credits.h  Damage.h  DamagerDamaged.h  DeckMenu.h  DeckMenuItem.h  DeckMetaData.h  DuelLayers.h  Effects.h  ExtraCost.h  GameApp.h  GameObserver.h  GameOptions.h  GameState.h  GameStateDeckViewer.h  GameStateDuel.h  GameStateMenu.h  GameStateOptions.h  GameStateShop.h  GameStateStory.h  GameStateTransitions.h  GuiBackground.h  GuiCardsController.h  GuiCombat.h  GuiHand.h  GuiLayers.h  (+56 more)
projects/mtg/src/: AIHints.cpp  AIMomirPlayer.cpp  AIPlayer.cpp  AIPlayerBaka.cpp  AIPlayerBakaB.cpp  AIStats.cpp  AbilityParser.cpp  ActionElement.cpp  ActionLayer.cpp  ActionStack.cpp  AllAbilities.cpp  CardDescriptor.cpp  CardDisplay.cpp  CardGui.cpp  CardPrimitive.cpp  CardSelector.cpp  Closest.cpp  Counters.cpp  Credits.cpp  Damage.cpp  DamagerDamaged.cpp  DeckEditorMenu.cpp  DeckManager.cpp  DeckMenu.cpp  DeckMenuItem.cpp  DeckMetaData.cpp  DeckStats.cpp  DuelLayers.cpp  ExtraCost.cpp  GameApp.cpp  GameObserver.cpp  GameOptions.cpp  GameState.cpp  GameStateAwards.cpp  GameStateDeckViewer.cpp  GameStateDuel.cpp  GameStateMenu.cpp  GameStateOptions.cpp  GameStateShop.cpp  GameStateStory.cpp  (+63 more)
projects/mtg/tests/testsuite/src/: main_psp.cpp  main_sdl.cpp
projects/mtg/tests/testsuite/src/test/: wagic_wrapper.cpp
projects/woth/: meson.build
subprojects/: dis.wrap  dis_homebrew.wrap
tools/: build_all.sh  psp_build_make.sh  psp_build_meson.sh  psp_post_build.sh
tools/meson/: psp.build
tools/mingw/: Dockerfile  i686-w64-mingw32.build  i686_build_meson.sh  mingw_build_meson.sh  x86_64-w64-mingw32.build  x86_64_build_meson.sh
tools/psp/: Dockerfile  mips_psp.build  psp_build_meson.sh  psp_post_build.sh
woth/: LICENSE  meson.build
woth/include/: AIMomirPlayer.h  AIPlayer.h  AIPlayerBaka.h  AIPlayerBakaB.h  AbilityParser.h  ActionLayer.h  ActionStack.h  AllAbilities.h  CacheEngine.h  CardDescriptor.h  CardDisplay.h  CardPrimitive.h  Counters.h  Damage.h  DeckDataWrapper.h  DeckEditorMenu.h  DeckManager.h  DeckMenu.h  DeckMenuItem.h  DeckStats.h  GameApp.h  GameObserver.h  GameOptions.h  (+46 more)
woth/tests/testsuite/: meson.build
woth/tests/testsuite/include/test/: wagic_wrapper.hpp
woth/tests/testsuite/src/: main_psp.cpp  main_sdl.cpp
woth/tests/testsuite/src/test/: wagic_wrapper.cpp
(+124 files in other folders)
